# printf

./: .NetrwMessage.swp  ._printf.c.swn  ._printf.c.swo  ._printf.c.swp  .a.out.swp  .gitignore  .main.h.swo  .main.h.swp  .printf_aux_h.c.swp  .printf_int.c.swo  .printf_int.c.swp  .printf_string.c.swp  0-task.c  1-task.c  CMakeLists.txt  README.md  _printf.c  _putchar.c  a.out  main.c  main.h  printf_HEXDEC.c  printf_Xstring.c  printf_aux_h.c  printf_binary.c  printf_cent.c  printf_char.c  printf_hexdec.c  printf_int.c  printf_octdec.c  printf_pointer.c  printf_reverse.c  printf_rt13.c  printf_str.c  printf_string.c  printf_unsigned.c
test/: README.md
